# mongraph

./: .gitignore  LICENSE  README.md  pyproject.toml
mongraph/: __main__.py  bokeh_app.py  data_client.py  layout_generator.py  plot.py
samples/: ninja_pipeline.json
samples/ninja/: data.json
tests/: test_mongraph.py
